<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    >
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginRight="4dp"
      >
      <ImageView android:id="@+id/resto_imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerInside"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"/>
      <ImageButton android:id="@+id/resto_imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        />
    </LinearLayout>
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_weight="1"
      >
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="REQUIRED:"
        android:textSize="24sp"
        />
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resto_name_label"
        style="?android:listSeparatorTextViewStyle"
        />
      <EditText android:id="@+id/resto_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:hint="@string/name_hint"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_city_label"
                style="?android:listSeparatorTextViewStyle"
                />
        <EditText android:id="@+id/resto_city"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="16dp"
                  android:hint="@string/city_hint"
                />
    </LinearLayout>
  </LinearLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/crime_details_label"
    android:textSize="24dp"
    android:paddingLeft="4dp"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_phone_label"
                style="?android:listSeparatorTextViewStyle"
                />
        <EditText android:id="@+id/resto_phone"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="16dp"
                  android:hint="@string/phone_hint"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_latlong_label"
                style="?android:listSeparatorTextViewStyle"
                />
        <EditText android:id="@+id/resto_latlong"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="16dp"
                  android:hint="@string/latlong_hint"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_address_label"
                style="?android:listSeparatorTextViewStyle"
                />
        <EditText android:id="@+id/resto_address"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="16dp"
                  android:hint="@string/address_hint"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_yelp_label"
                style="?android:listSeparatorTextViewStyle"
                />
        <EditText android:id="@+id/resto_yelp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="16dp"
                  android:hint="@string/yelp_hint"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes_button_label"
                android:id="@+id/notes_button"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_button_label"
                android:id="@+id/map_button"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigate_button_label"
                android:id="@+id/navigate_button"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dial_button_label"
                android:id="@+id/dial_button"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yelp_button_label"
                android:id="@+id/yelp_button"/>
    </LinearLayout>

</LinearLayout>

